# Attuned

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEEP_RESEARCH.md  DEVELOPMENT.md  LICENSE-APACHE  MANIFESTO.md  README.md  SECURITY.md  TECHNICAL.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: architecture.md  code_style.md  development_workflow.md  project_overview.md  remaining_tasks.md  suggested_commands.md
crates/attuned-cli/: Cargo.toml  README.md
crates/attuned-cli/src/: main.rs
crates/attuned-core/src/: lib.rs  translator.rs
crates/attuned-http/: Cargo.toml  README.md
crates/attuned-http/src/: config.rs  error.rs  handlers.rs  lib.rs  middleware.rs  server.rs
crates/attuned-infer/benches/: inference.rs
crates/attuned-infer/src/: bayesian.rs  delta.rs  engine.rs  estimate.rs  features.rs  lib.rs
crates/attuned-python/: Cargo.toml  pyproject.toml
crates/attuned-python/python/attuned/: __init__.py  __init__.pyi
crates/attuned-python/src/: axes.rs  client.rs  lib.rs  snapshot.rs  translator.rs
crates/attuned-qdrant/: Cargo.toml  README.md
crates/attuned-qdrant/src/: config.rs  error.rs  lib.rs  store.rs
crates/attuned-store/: Cargo.toml  README.md
crates/attuned-store/src/: error.rs  lib.rs  memory.rs  traits.rs
docs/archive/: ORIGINAL_SPEC.md
examples/demo/: README.md  console_log_results.txt  demo_comparison.py  requirements.txt  rigorous_test.py  rigorous_test_v2.py  run_demo.sh  streamlit_app.py  validation_results_20251218_010718.txt  validation_v2_20251218_012607.txt  validation_v2_20251218_022037.txt
scripts/: bench-report.sh  validate_dreaddit.py
tasks/: TASK-004-attuned-qdrant-backend.md  TASK-007-attuned-cli.md  TASK-011-release-v1.md  TASK-013-governance-schema-formalization.md  TASK-014-python-bindings.md  TASK-018-demo-showcase.md  TASK-019-split-screen-demo.md
tasks/archive/: TASK-000-example-task-template.md  TASK-001-workspace-scaffolding.md  TASK-002-attuned-core-types.md  TASK-003-attuned-store-trait-memory.md  TASK-005-observability-infrastructure.md  TASK-006-attuned-http-server.md  TASK-008-testing-infrastructure.md  TASK-009-documentation.md  TASK-010-ci-cd-pipeline.md  TASK-012-security-hardening.md  TASK-015-inference-validation-dreaddit.md  TASK-016-inference-research-refinements.md  TASK-017-inference-integration.md
tasks/reports/: 00-index.md  01-system-architecture.md  02-axis-model.md  03-inference-engine.md  04-http-api-reference.md  05-integration-guide.md  dreaddit-validation.md
