[package]
name = "attuned-cli"
description = "CLI tool for Attuned development and testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "attuned"
path = "src/main.rs"

[dependencies]
attuned-core = { workspace = true }
attuned-store = { workspace = true }
attuned-http = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
