[package]
name = "attuned-http"
description = "HTTP reference server for Attuned"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
attuned-core = { workspace = true }
attuned-store = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
inference = ["dep:attuned-infer", "dep:dashmap"]

[dependencies.attuned-infer]
workspace = true
optional = true

[dependencies.dashmap]
workspace = true
optional = true
