[package]
name = "attuned-store"
description = "Storage traits and in-memory backend for Attuned"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
attuned-core = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }

[features]
default = []
